fix: backface visibility hidden

--- a/src/scss/includes/components/_collection.scss
+++ b/src/scss/includes/components/_collection.scss
@@ -273,7 +273,7 @@
 
     &__illustration {
         will-change: transform;
-
+        backface-visibility: hidden;
 
         @include breakpoint(desktop) {
             width: vw(530);
