--- a/src/scss/includes/modules/_collection_hero.scss
+++ b/src/scss/includes/modules/_collection_hero.scss
@@ -64,6 +64,7 @@
             bottom: rem(100);
             opacity: 0;
             will-change: transform, opacity;
+            backface-visibility: hidden;
 
             // translate: 0 -50%;
 
